
[project]
name = "AlphaDRY"
version = "0.1.0"
description = ""
authors = ["Ledger <ledger@drypowder.fun>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "langchain-openai>=0.2.9",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.1",
    "python-dotenv>=1.0.1",
    "openai>=1.55.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.10",
    "jinja2>=3.1.4",
]
